--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <p class="mbr-text mbr-fonts-style display-7">With the addition of some new CSS properties in the last few years, frontend developers can now create interesting text visuals much easier. "Knockout" or "cutout" text, where words clip a background image, gradient or video, are possible with very little code.
 <br>
 <br>In this article, we'll explore five CSS text masking and clipping techniques using the <strong>background-clip</strong> and <strong>clip-path</strong> properties.</p>
-                <div class="mbr-section-btn mt-3"><a class="btn btn-success display-4" href="https://letsbuildui.dev/articles/css-text-effects-five-minimal-examples" target="_blank">Source</a></div>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-success display-4" href="https://letsbuildui.dev/articles/css-text-effects-five-minimal-examples" target="_blank">Source</a> <a class="btn btn-success-outline display-4" href="mailto:casper392945@gmail.com">Feedback</a></div>
             </div>
         </div>
     </div>
